:bug: fixed overflow x

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,13 @@
   scroll-behavior: smooth;
   color-scheme: light;
   min-width: full;
+  /* overflow-x: hidden; */
+}
+
+@media (max-width: 768px) {
+  * {
+    overflow-x: hidden;
+  }
 }
 
 body {
